# go2cbt

./: .gitignore  CLAUDE.md  README.md  go2cbt.sln
.workbuddy/memory/: 2026-07-09.md  2026-07-10.md  2026-07-12.md  2026-07-13.md
cbtctl/: cbtctl.vcxproj  main.cpp
client/: BackupEngine.cpp  BackupEngine.h  BlockHasher.cpp  BlockHasher.h  BlockStateManager.cpp  BlockStateManager.h  CbtClient.cpp  CbtClient.h  DataCompressor.cpp  DataCompressor.h  DiskParser.cpp  DiskParser.h  DiskScanner.cpp  DiskScanner.h  Logger.cpp  Logger.h  NetworkClient.cpp  NetworkClient.h  PrivilegeManager.cpp  PrivilegeManager.h  VolumeMapper.cpp  VolumeMapper.h  VssManager.cpp  VssManager.h  client.vcxproj  client.vcxproj.filters  firmware.cpp  firmware.h  logger.cpp  logger.h  main.cpp
docs/: BackupEngine.md  BlockHasher.md  BlockStateManager.md  DiskParser.md  ServerDesign.md  ServerImplementationPlan.md  VssManager.md  client.md  client_hang_diagnosis.md  zhihu-intro.md
go2cbt/: README.md  bitmap.c  dispatch.c  go2cbt.c  go2cbt.h  go2cbt.inf  go2cbt.vcxproj  go2cbt.vcxproj.filters  hook.c  ioctl.c  write.c
server/: BlockProcessor.cpp  BlockProcessor.h  CMakeLists.txt  DiskMap.cpp  DiskMap.h  Logger.cpp  Logger.h  MessageParser.cpp  MessageParser.h  Protocol.h  RingBuffer.cpp  RingBuffer.h  Server.cpp  Server.h  main.cpp
tests/: README.md  diag_volmap.vcxproj  test_BlockHasher.cpp  test_BlockStateManager.cpp  test_DataCompressor.cpp  test_DiskParser.cpp  test_Logger.cpp  test_VolumeMapper_diag.cpp  test_framework.h  test_main.cpp  tests.vcxproj
tools/: fix_be.pl  fix_be2.pl
